add low mass isochrones to model

--- a/data_anal/catalogue_analysis/catalogue.ipynb
+++ b/data_anal/catalogue_analysis/catalogue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['M_ini', 'BC', 'U-B', 'B-V', 'V-R', 'V-I'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "times = [6.0 + i*0.1 for i in range(31)]\n",
     "\n",
@@ -167,17 +175,83 @@
     "isochrone_cols = [\"M_ini\", \"MV\", \"U-B\", \"B-V\", \"V-R\", \"V-I\"]\n",
     "isochrones = {\n",
     "    times[i]: pd.read_csv(os.path.join(\"..\", \"isochrones\", filenames[i]), delim_whitespace=True)[isochrone_cols] for i in range(len(filenames))\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "low_mass_filename = [f\"lm_isochrone_{10*t:.0f}.dat\" for t in times]\n",
+    "lm_iso_cols = [\"M_ini\",\"BC\", \"U-B\", \"B-V\", \"V-R\", \"V-I\"]\n",
+    "low_mass_isochrones = {\n",
+    "    times[i]: pd.read_csv(os.path.join(\"..\", \"isochrones\", low_mass_filename[i]), delim_whitespace=True)[lm_iso_cols] for i in range(len(filenames))\n",
+    "}\n",
+    "print(low_mass_isochrones[6].columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           M_ini         BC        U-B        B-V        V-R        V-I  \\\n",
+      "count  74.000000  23.000000  74.000000  74.000000  74.000000  74.000000   \n",
+      "mean    1.169162  -1.795157   0.597977   0.826696   0.531407   1.096185   \n",
+      "std     0.920855   0.244455   0.630200   0.652434   0.426995   0.949896   \n",
+      "min     0.200000  -2.174500  -0.413300  -0.132900  -0.045400  -0.157700   \n",
+      "25%     0.417250  -1.997100   0.050500   0.125175   0.083375   0.166350   \n",
+      "50%     0.845500  -1.801300   0.646300   0.914350   0.506150   0.931950   \n",
+      "75%     1.720500  -1.599650   1.229075   1.508000   0.993125   2.100650   \n",
+      "max     3.500000  -1.390700   1.308000   1.601000   1.129700   2.585600   \n",
+      "\n",
+      "            isoU       isoB       isoV       isoR       isoI         MV  \n",
+      "count  74.000000  74.000000  74.000000  74.000000  74.000000  51.000000  \n",
+      "mean    3.225914   2.627936   1.801241   1.269834   0.705055   4.121516  \n",
+      "std     4.090401   4.057389   4.177176   4.353825   4.675518   2.787940  \n",
+      "min    -0.997000  -2.174500  -3.775500  -4.905200  -6.361100   0.329000  \n",
+      "25%    -0.248400  -1.528800  -3.036800  -4.029925  -5.137450   1.612250  \n",
+      "50%     1.686550   1.737000   1.735050   1.715650   1.719300   3.710300  \n",
+      "75%     6.004275   5.766075   5.090700   4.713925   4.382750   6.464100  \n",
+      "max    11.621400  10.354600   9.020800   8.215500   7.451700   9.020800  \n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "from matplotlib import colors\n",
+    "\n",
+    "times = [6.0 + 0.1*i for i in range(31)]\n",
+    "final_isochrones = {}\n",
+    "for index, log_t in enumerate(times):\n",
+    "    vmags = isochrones[log_t][\"MV\"] \n",
+    "    bmags = isochrones[log_t][\"B-V\"] + vmags\n",
+    "    rmags = vmags - isochrones[log_t][\"V-R\"]\n",
+    "    imags = vmags - isochrones[log_t][\"V-I\"]\n",
+    "    umags = isochrones[log_t][\"U-B\"] + bmags \n",
+    "    isochrones[log_t][\"isoU\"] = umags\n",
+    "    isochrones[log_t][\"isoB\"] = bmags\n",
+    "    isochrones[log_t][\"isoV\"] = vmags\n",
+    "    isochrones[log_t][\"isoR\"] = rmags\n",
+    "    isochrones[log_t][\"isoI\"] = imags\n",
+    "    \n",
+    "    lmb = low_mass_isochrones[log_t][\"BC\"]\n",
+    "    lmu = low_mass_isochrones[log_t][\"U-B\"] + lmb\n",
+    "    lmv = lmb - low_mass_isochrones[log_t][\"B-V\"]\n",
+    "    lmr = lmv - low_mass_isochrones[log_t][\"V-R\"]\n",
+    "    lmi = lmv - low_mass_isochrones[log_t][\"V-I\"]\n",
+    "    low_mass_isochrones[log_t][\"isoU\"] = lmu \n",
+    "    low_mass_isochrones[log_t][\"isoB\"] = lmb \n",
+    "    low_mass_isochrones[log_t][\"isoV\"] = lmv \n",
+    "    low_mass_isochrones[log_t][\"isoR\"] = lmr \n",
+    "    low_mass_isochrones[log_t][\"isoI\"] = lmi \n",
+    "    \n",
+    "    low_mass_isochrones[log_t] = low_mass_isochrones[log_t][low_mass_isochrones[log_t][\"M_ini\"] < 0.5]  \n",
+    "    final_isochrones[log_t] = pd.concat((low_mass_isochrones[log_t], isochrones[log_t]))\n",
+    "\n",
+    "print(final_isochrones[7.5].describe())\n",
+    "\n",
+    "# print(low_mass_isochrones[6].columns)\n",
+    "# print(isochrones[6].columns)\n",
     "\n",
     "def plot_3_cmds(data):\n",
     "    fig, (ax1, ax2, ax3) = plt.subplots(nrows=1, ncols=3)\n",
@@ -219,19 +293,19 @@
     "\n",
     "    times = [6.0 + 0.1*i for i in range(31)]\n",
     "    for index, log_t in enumerate(times):\n",
-    "        vmags = isochrones[log_t][\"MV\"] \n",
-    "        bmags = isochrones[log_t][\"B-V\"] + vmags\n",
-    "        rmags = vmags - isochrones[log_t][\"V-R\"]\n",
-    "        imags = vmags - isochrones[log_t][\"V-I\"]\n",
-    "        umags = isochrones[log_t][\"U-B\"] + bmags \n",
-    "        isochrones[log_t][\"isoU\"] = umags\n",
-    "        isochrones[log_t][\"isoB\"] = bmags\n",
-    "        isochrones[log_t][\"isoV\"] = vmags\n",
-    "        isochrones[log_t][\"isoR\"] = rmags\n",
-    "        isochrones[log_t][\"isoI\"] = imags\n",
-    "        # ax1.plot(bmags - vmags, bmags, c=cmap(index/len(times)))\n",
-    "        # ax2.plot(vmags - rmags, vmags, c=cmap(index/len(times)))\n",
-    "        # ax3.plot(rmags - imags, rmags, c=cmap(index/len(times)))\n",
+    "        # vmags = isochrones[log_t][\"MV\"] \n",
+    "        # bmags = isochrones[log_t][\"B-V\"] + vmags\n",
+    "        # rmags = vmags - isochrones[log_t][\"V-R\"]\n",
+    "        # imags = vmags - isochrones[log_t][\"V-I\"]\n",
+    "        # umags = isochrones[log_t][\"U-B\"] + bmags \n",
+    "        # isochrones[log_t][\"isoU\"] = umags\n",
+    "        # isochrones[log_t][\"isoB\"] = bmags\n",
+    "        # isochrones[log_t][\"isoV\"] = vmags\n",
+    "        # isochrones[log_t][\"isoR\"] = rmags\n",
+    "        # isochrones[log_t][\"isoI\"] = imags\n",
+    "        ax1.plot(bmags - vmags, bmags, c=cmap(index/len(times)))\n",
+    "        ax2.plot(vmags - rmags, vmags, c=cmap(index/len(times)))\n",
+    "        ax3.plot(rmags - imags, rmags, c=cmap(index/len(times)))\n",
     "    ax1.set_xlim((-0.5, 2.5))\n",
     "    ax1.set_ylim((-2, 7.5))\n",
     "\n",
@@ -242,8 +316,7 @@
     "    ax3.set_xlim((-1, 1.5))\n",
     "    ax1.invert_yaxis()\n",
     "    ax2.invert_yaxis()\n",
-    "    ax3.invert_yaxis()\n",
-    "plot_3_cmds(data)"
+    "    ax3.invert_yaxis()"
    ]
   },
   {
@@ -338,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +423,17 @@
       "       'isoR', 'isoI'],\n",
       "      dtype='object')\n",
       "675\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "metric1() missing 1 required positional argument: 'stds'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=17'>18</a>\u001b[0m     mass_data\u001b[39m.\u001b[39mappend(right_isochrone[\u001b[39m\"\u001b[39m\u001b[39mM_ini\u001b[39m\u001b[39m\"\u001b[39m][min_index])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=18'>19</a>\u001b[0m     \u001b[39m# dist = np.min([\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=19'>20</a>\u001b[0m     \u001b[39m#     metric1(\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=20'>21</a>\u001b[0m     \u001b[39m#         (data[\"B\"].iloc[i], data[\"V\"].iloc[i], data[\"R\"].iloc[i], data[\"I\"].iloc[i]),\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=23'>24</a>\u001b[0m     \u001b[39m#     ) for j in range(len(right_isochrone[\"isoB\"]))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=24'>25</a>\u001b[0m     \u001b[39m# ])\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=25'>26</a>\u001b[0m     dist \u001b[39m=\u001b[39m metric1(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=26'>27</a>\u001b[0m         (data[\u001b[39m\"\u001b[39;49m\u001b[39mB\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[i], data[\u001b[39m\"\u001b[39;49m\u001b[39mV\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[i], data[\u001b[39m\"\u001b[39;49m\u001b[39mR\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[i], data[\u001b[39m\"\u001b[39;49m\u001b[39mI\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[i]), \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=27'>28</a>\u001b[0m         (right_isochrone[\u001b[39m\"\u001b[39;49m\u001b[39misoB\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[min_index], right_isochrone[\u001b[39m\"\u001b[39;49m\u001b[39misoV\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[min_index], right_isochrone[\u001b[39m\"\u001b[39;49m\u001b[39misoR\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[min_index], right_isochrone[\u001b[39m\"\u001b[39;49m\u001b[39misoI\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[min_index])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=28'>29</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=29'>30</a>\u001b[0m     distance_data\u001b[39m.\u001b[39mappend(dist)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/vasil/brezi22/data_anal/catalogue_analysis/catalogue.ipynb#ch0000014?line=31'>32</a>\u001b[0m data[\u001b[39m\"\u001b[39m\u001b[39mdistance\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m distance_data\n",
+      "\u001b[0;31mTypeError\u001b[0m: metric1() missing 1 required positional argument: 'stds'"
      ]
     }
    ],
@@ -391,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +516,9 @@
    ],
    "source": [
     "%matplotlib qt\n",
-    "plt.hist(data[\"mass\"], bins=50, range=[0, 4])\n",
+    "plt.yscale('log')\n",
+    "plt.xscale('log')\n",
+    "plt.hist(data[\"mass\"], bins=50, range=[0.5, 4])\n",
     "plt.show()\n",
     "threshold = 0.25\n",
     "data_in_cluster = data[data[\"distance\"] < threshold]\n",
