perhaps final sync?

--- a/data_anal/catalogue_analysis/catalogue.ipynb
+++ b/data_anal/catalogue_analysis/catalogue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                _r      RAJ2000      DEJ2000         gmag       e_gmag  \\\n",
+      "count  6103.000000  6103.000000  6103.000000  2775.000000  1760.000000   \n",
+      "mean      4.713027   305.933606    38.482211    21.518668     0.059655   \n",
+      "std       1.622350     0.074891     0.058212     3.321451     0.068847   \n",
+      "min       0.034900   305.794028    38.370887     8.725000     0.000000   \n",
+      "25%       3.582200   305.872763    38.433972    19.862950     0.009475   \n",
+      "50%       4.991800   305.929423    38.481161    21.577800     0.030750   \n",
+      "75%       6.088200   305.992937    38.528819    23.208000     0.081100   \n",
+      "max       6.999900   306.091144    38.602637    30.090000     0.432200   \n",
+      "\n",
+      "              rmag       e_rmag         imag       e_imag         zmag  \\\n",
+      "count  3702.000000  3187.000000  5594.000000  5401.000000  5895.000000   \n",
+      "mean     20.065846     0.061443    19.683335     0.050423    19.009028   \n",
+      "std       2.377252     0.069253     1.994553     0.058106     1.806394   \n",
+      "min       7.983500     0.000000     8.156000     0.000000     7.266100   \n",
+      "25%      19.064600     0.010850    18.862500     0.010900    18.281500   \n",
+      "50%      20.661800     0.032200    20.261600     0.027300    19.488900   \n",
+      "75%      21.540800     0.088900    21.132475     0.065300    20.319900   \n",
+      "max      26.201000     0.479500    22.840000     0.453500    21.330400   \n",
+      "\n",
+      "            e_zmag  \n",
+      "count  5831.000000  \n",
+      "mean      0.044909  \n",
+      "std       0.050470  \n",
+      "min       0.000000  \n",
+      "25%       0.011500  \n",
+      "50%       0.026000  \n",
+      "75%       0.058800  \n",
+      "max       0.462700  \n"
+     ]
+    }
+   ],
    "source": [
-    "data_filename = \"m39_14arcmin_panstarrs.csv\"\n",
+    "data_filename = \"m29_7arcmin_panstarrs_data.csv\"\n",
     "data = pd.read_csv(os.path.join(base_dir, data_filename), sep=';')\n",
     "useful_columns = [\"_r\", \"RAJ2000\", \"DEJ2000\", \"gmag\", \"e_gmag\", \"rmag\", \"e_rmag\", \"imag\", \"e_imag\", \"zmag\", \"e_zmag\"]\n",
     "data = data[useful_columns]\n",
@@ -36,12 +72,13 @@
     "        return float(x)\n",
     "    except Exception:\n",
     "        return np.nan \n",
-    "data = data.applymap(to_float).astype(float)"
+    "data = data.applymap(to_float).astype(float)\n",
+    "print(data.describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +87,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                _r      RAJ2000      DEJ2000         gmag       e_gmag  \\\n",
+      "count  2641.000000  2641.000000  2641.000000  2641.000000  1629.000000   \n",
+      "mean      4.725604   305.935539    38.483476    21.623468     0.055435   \n",
+      "std       1.592680     0.075223     0.058280     3.276687     0.065481   \n",
+      "min       0.034900   305.794028    38.371720     8.725000     0.000000   \n",
+      "25%       3.592300   305.873864    38.435752    19.892500     0.009100   \n",
+      "50%       4.972200   305.929754    38.482309    21.618000     0.028400   \n",
+      "75%       6.075000   305.994990    38.529979    23.485000     0.070900   \n",
+      "max       6.999800   306.091144    38.602637    30.090000     0.432200   \n",
+      "\n",
+      "              rmag       e_rmag         imag       e_imag         zmag  \\\n",
+      "count  2641.000000  2131.000000  2641.000000  2451.000000  2641.000000   \n",
+      "mean     19.719195     0.036523    18.562242     0.022226    17.803363   \n",
+      "std       2.478741     0.049236     2.039345     0.034142     1.803760   \n",
+      "min       8.338800     0.000000     8.156000     0.000000     7.967000   \n",
+      "25%      18.477900     0.007600    17.599900     0.005500    16.969300   \n",
+      "50%      20.027000     0.018800    18.905700     0.011600    18.182700   \n",
+      "75%      21.212300     0.042000    19.840200     0.022950    18.933000   \n",
+      "max      26.201000     0.458600    22.840000     0.375800    21.138700   \n",
+      "\n",
+      "            e_zmag            B            V            R            I  \n",
+      "count  2579.000000  2641.000000  2641.000000  2641.000000  2641.000000  \n",
+      "mean      0.019080    22.576135    20.489947    19.008868    17.641915  \n",
+      "std       0.025128     3.655141     2.766893     2.269344     1.994452  \n",
+      "min       0.000000     9.002080     8.555020     8.077780     4.968519  \n",
+      "25%       0.005700    20.608206    19.093658    17.929288    16.699079  \n",
+      "50%       0.011900    22.420822    20.670331    19.240734    17.815018  \n",
+      "75%       0.021200    24.602470    22.100056    20.371520    18.753120  \n",
+      "max       0.335600    31.988045    27.785490    23.979330    25.865894  \n"
+     ]
+    }
+   ],
    "source": [
     "def ugriz_to_ubvri(ugriz):\n",
     "    u, g, r, i, z = ugriz\n",
@@ -88,19 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2641\n"
+     ]
+    }
+   ],
    "source": [
     "m29_dist = 1148 # pc\n",
     "m39_dist = 326\n",
-    "obs_minus_absolue = 5*np.log10(m39_dist) - 5\n",
-    "data = data[data[\"B\"] < 22] \n",
+    "obs_minus_absolue = 5*np.log10(m29_dist) - 5\n",
     "data[\"B\"] -= obs_minus_absolue\n",
     "data[\"V\"] -= obs_minus_absolue\n",
     "data[\"R\"] -= obs_minus_absolue\n",
     "data[\"I\"] -= obs_minus_absolue\n",
-    "a_redd = 0.013\n",
+    "a_redd = 0.744\n",
     "\n",
     "A_v = 3.1*a_redd\n",
     "A_b = 1.32*A_v\n",
@@ -110,7 +190,8 @@
     "data[\"B\"] -= A_b\n",
     "data[\"V\"] -= A_v \n",
     "data[\"R\"] -= A_r\n",
-    "data[\"I\"] -= A_i"
+    "data[\"I\"] -= A_i\n",
+    "print(len(data[\"B\"]))"
    ]
   },
   {
@@ -122,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,8 +232,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shifted isochrone"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.tight_layout()\n",
+    "# plt.scatter(data[\"B\"] - data[\"V\"], data[\"V\"] + obs_minus_absolue, s=1)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +314,7 @@
     "    \n",
     "    # low_mass_isochrones[log_t] = low_mass_isochrones[log_t][low_mass_isochrones[log_t][\"M_ini\"] < 0.5]  \n",
     "    # final_isochrones[log_t] = pd.concat((low_mass_isochrones[log_t], isochrones[log_t]))\n",
-    "    # final_isochrones[log_t].sort_values(by=\"M_ini\", inplace=True)\n",
+    "    final_isochrones[log_t].sort_values(by=\"M_ini\", inplace=True)\n",
     "\n",
     "def plot_3_cmds(data):\n",
     "    fig, (ax1, ax2, ax3) = plt.subplots(nrows=1, ncols=3)\n",
@@ -295,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,14 +408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*c* argument looks like a single numeric RGB or RGBA sequence, which should be avoided as value-mapping will have precedence in case its length matches with *x* & *y*.  Please use the *color* keyword-argument or provide a 2D array with a single row if you intend to specify the same RGB or RGBA value for all points.\n"
+      "2606\n",
+      "2606\n"
      ]
     }
    ],
@@ -334,7 +434,7 @@
     "V = data[\"V\"]\n",
     "R = data[\"R\"]\n",
     "I = data[\"I\"]\n",
-    "# ax.scatter3D(B, V, R, s=1, color='red')\n",
+    "ax.scatter3D(B, V, R, s=0.5, color='red')\n",
     "\n",
     "# isochrone\n",
     "cdict = {'red':   ((0.0,  0.22, 0.0),\n",
@@ -351,17 +451,18 @@
     "\n",
     "cmap = colors.LinearSegmentedColormap('custom', cdict)\n",
     "\n",
-    "times = [8.5]\n",
+    "times = [7.1]\n",
     "for index, log_t in enumerate(times):\n",
     "    bmags = final_isochrones[log_t][\"isoB\"]\n",
     "    vmags = final_isochrones[log_t][\"isoV\"]\n",
     "    rmags = final_isochrones[log_t][\"isoR\"]\n",
     "    imags = final_isochrones[log_t][\"isoI\"]\n",
     "\n",
-    "    ax.scatter(bmags, vmags, rmags, c=cmap(index/len(times)))\n",
+    "    ax.plot(bmags, vmags, rmags, c=cmap(index/len(times)))\n",
     "ax.set_xlabel(\"B mag\")\n",
     "ax.set_ylabel(\"V mag\")\n",
     "ax.set_zlabel(\"R mag\")\n",
+    "plt.title(\"Изохрона за $t=10^7.1$ yr\", fontsize=20)\n",
     "plt.show()"
    ]
   },
@@ -623,17 +724,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 10\n",
-      "[-1.28944765 -0.96708574 -0.64472383 -0.32236191  0.          0.32236191\n",
-      "  0.64472383  0.96708574  1.28944765] [7.68248245 7.97349996 6.65415252 5.6167711  3.78418963 1.79175947\n",
-      " 1.60943791 1.09861229 0.        ]\n",
       "a: -3.374521566192989, b: 4.023433925850827\n"
      ]
     }
